<resources>
    <string name="app_name">Hướng Dẫn Sơ Cứu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- Title nav fragment -->
    <string name="emergency_fragment">Khẩn cấp</string>
    <string name="emergency_advice">Hãy nhớ rằng bạn cần phải có đủ sức khỏe thì mới có thể giúp đỡ người khác được!</string>

    <string name="learning_fragment">Tìm hiểu</string>
    <string name="more_fragment">Thêm</string>
    <string name="setting_fragment">Cài đặt</string>
    <string name="infor_fragment">Thông tin phần mềm</string>

    <!--Activities-->
    <!--Notification-->
    <string name="notification_title">Thông báo</string>
    <string name="notification_clear">Xóa thông báo</string>

    <!--Qa-->
    <string name="qa_title">Ý kiến - Hỏi đáp</string>
    <string name="qa_text_name">Tên của bạn</string>
    <string name="qa_text_email">Email</string>
    <string name="qa_text_title"> Tiêu đề</string>
    <string name="qa_text_content">Nội dung</string>
    <string name="qa_button_send">Gửi</string>

    <!--Faq-->
    <string name="faq_title">Câu hỏi thường gặp</string>

    <!--banner-->
    <string name="banner_title">Khóa học sơ cấp cứu</string>
    <string name="banner_text_name">Khóa học: </string>
    <string name="banner_content_name">ĐÀO TẠO KỸ THUẬT SƠ CẤP CỨU BAN ĐẦU</string>
    <string name="banner_text_address">Địa chỉ: </string>
    <string name="banner_content_address">11 Phan Chu Trinh - Hoàn Kiếm - Hà Nội</string>
    <string name="banner_text_phone">SĐT liên hệ: </string>
    <string name="banner_content_phone">04.38262952</string>
    <string name="banner_text_information">Giới thiệu: </string>
    <string name="banner_content_information">Với đội ngũ Bác sĩ, điều dưỡng chuyên làm nhiệm vụ cấp cứu ban đầu cho người bệnh, chúng tôi thường xuyên tổ chức các khóa tập huấn, đào tạo về kỹ thuật sơ cấp cứu ban đầu cho các cá nhân, tổ chức, cơ quan, nhà máy, xí nghiệp .....</string>
    <string name="banner_name">Khóa học sơ cấp cứu</string>

    <!--map-->
    <string name="map_title">Chỉ đường</string>
    <string name="textview_locating">Đang tìm vị trí</string>

    <!--health facility-->
    <string name="health_text_title">CƠ SỞ Y TẾ GẦN ĐÂY</string>

    <string name="sos_calling">SOS Calling</string>

    <string name="title_activity_instruction_detail">InstructionDetail</string>

    <!-- Setting screen string value -->
    <string name="switch_notification">Thông báo</string>
    <string name="summary_switch_notification">Nhận thông báo</string>
    <string name="switch_sending_information">Đồng ý gửi</string>
    <string name="summary_switch_sending_information">Gửi vị trí, số điện thoại và tính huống của bạn khi gọi 115</string>
    <string name="summary_switch_sending_phone_number">Gửi số điện thoại của bạn khi gọi 115</string>
    <string name="sending_phone_number">Nhập số điện thoại</string>


    <string name="history_clear">Xóa lịch sử</string>

    <!--demo item notification-->
    <string-array name="item_notification">
        <item>15:05 12/10/2016  Cập nhật phiên bản 1.1</item>
        <item>07:00 15/10/2016  Cập nhật phiên bản 1.2</item>
        <item>09:30 18/10/2016  Cập nhật phiên bản 2.0</item>
        <item>17:17 20/10/2016  Cập nhật phiên bản 2.1</item>
    </string-array>

    <!--about screen-->
    <string name="appli_about">Điều khoản sử dụng</string>
    <string name="appli_information">1. Hướng Dẫn Sơ Cứu cung cấp cho người dùng những cách thức
        xử trí khi gặp tình huống khẩn cấp. Nội dung trong ứng dụng được trích dẫn từ Hội chữ
        thập đỏ và được Việt hóa và xác nhận nội dung bởi Trung tâm cấp cứu 115 Hà Nội.
        \n
        2. Những hướng dẫn xử trí chỉ là những gợi ý cho các tình huống khẩn cấp.
        .</string>
    <string name="version_title">Phiên bản</string>
    <string name="version_name">1.0</string>
    <string name="us_about">Nhóm phát triển</string>
    <string name="us_information">
    Đàm Huy Hùng\nMai Trung Kiên\nNguyễn Duy Anh\nNguyễn Phúc An\nNguyễn Tiến Dũng
    </string>

    <!-- Buttons string value -->
    <string name="faq_button">Câu hỏi thường gặp</string>
    <string name="qa_button">Đặt câu hỏi cho chúng tôi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
