<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<Preference-->
        <!--android:key="pref_name_color_picker"-->
        <!--android:title="Colour"-->
        <!--android:summary="Colour of the name"-->
        <!--android:defaultValue="#FFFFFF"-->
        <!--android:layout="@layout/custom_setting_layout" />-->
    <SwitchPreference
        android:key="switch_notification"
        android:summary="@string/summary_switch_notification"
        android:title="@string/switch_notification" />


    <PreferenceCategory android:title="Gửi thông tin">

        <SwitchPreference
            android:key="switch_sending_information"
            android:summary="@string/summary_switch_sending_information"
            android:title="@string/switch_sending_information" />
        <EditTextPreference
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/sending_phone_number"
            android:key="et_phone_number"
            android:summary="@string/summary_switch_sending_phone_number"
            android:dependency="switch_sending_information"/>
    </PreferenceCategory>


</PreferenceScreen>



