<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_banner_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.favn.firstaid.activites.BannerDetail">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardView_115"
        android:layout_margin="@dimen/margin_8">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"><![CDATA[>

            ]]>

            <ImageView
                android:layout_width="match_parent"
                android:src="@drawable/banner"
                android:id="@+id/img_banner"
                android:layout_marginRight="0dp"
                android:layout_height="70dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:text="@string/banner_text_name"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_name"
                        android:layout_width="80dp"
                        android:textColor="@color/colorInActive"
                        android:alpha="0.87" />

                    <TextView
                        android:text="@string/banner_content_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/content_name"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/margin_8"
                        android:alpha="0.54"
                        android:textColor="@color/colorInActive" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:text="@string/banner_text_address"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_address"
                        android:alpha="0.87"
                        android:textColor="@color/colorInActive"/>

                    <TextView
                        android:text="@string/banner_content_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/content_address"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/margin_8"
                        android:alpha="0.54"
                        android:textColor="@color/colorInActive"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:text="@string/banner_text_phone"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_phone"
                        android:alpha="0.87"
                        android:textColor="@color/colorInActive"/>

                    <TextView
                        android:text="@string/banner_content_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/content_phone"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/margin_8"
                        android:alpha="0.54"
                        android:textColor="@color/colorInActive"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginBottom="@dimen/margin_8">

                    <TextView
                        android:text="@string/banner_text_information"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_information"
                        android:alpha="0.87"
                        android:textColor="@color/colorInActive"/>

                    <TextView
                        android:text="@string/banner_content_information"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/content_information"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/margin_8"
                        android:alpha="0.54"
                        android:textColor="@color/colorInActive"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
