<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_qa"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.favn.firstaid.activites.QAActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:weightSum="1"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginRight="@dimen/margin_16">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:gravity="top"
                android:background="#E0E0E0">
                <TextView
                    android:text="@string/qa_text_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:layout_marginLeft="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginBottom="@dimen/margin_8"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:gravity="top">
                <EditText
                    android:layout_width="match_parent"
                    android:inputType="textPersonName"
                    android:id="@+id/edittext_name"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:hint="..."
                    android:maxLength="45" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:gravity="top"
                android:background="#E0E0E0">
                <TextView
                    android:text="@string/qa_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginBottom="@dimen/margin_8"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:gravity="top">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:id="@+id/edittext_email"
                    android:textSize="18sp"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:hint="..."
                    android:maxLength="255" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:gravity="top"
                android:background="#E0E0E0">
                <TextView
                    android:text="@string/qa_text_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginBottom="@dimen/margin_8"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:gravity="top">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:gravity="top">
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp">
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textSize="18sp"
                            android:layout_marginTop="@dimen/margin_8"
                            android:layout_marginBottom="@dimen/margin_8"
                            android:id="@+id/radio_injury" />
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textSize="18sp"
                            android:layout_marginTop="@dimen/margin_16"
                            android:layout_marginBottom="@dimen/margin_8"
                            android:id="@+id/radio_title" />
                    </RadioGroup>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:gravity="top">
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_marginTop="@dimen/margin_8"
                        android:layout_marginBottom="@dimen/margin_8"
                        android:id="@+id/spin_injury" />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textSize="18sp"
                        android:layout_marginTop="@dimen/margin_8"
                        android:layout_marginBottom="@dimen/margin_8"
                        android:hint="Khác..."
                        android:id="@+id/edittext_title"
                        android:maxLength="255" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:gravity="top"
                android:background="#E0E0E0">
                <TextView
                    android:text="@string/qa_text_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:layout_marginLeft="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginBottom="@dimen/margin_8"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:gravity="top">
                <EditText
                    android:layout_width="match_parent"
                    android:inputType="textMultiLine"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:hint="..."
                    android:lines="6"
                    android:id="@+id/edittext_content"
                    android:maxLength="500" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/llButton"
                android:gravity="center">

                <Button
                    android:text="@string/qa_button_send"
                    android:layout_width="121dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_send"
                    android:clickable="true"
                    android:background="@drawable/button_selector"
                    android:textSize="18sp"
                    android:textColor="@color/cast_libraries_material_featurehighlight_text_body_color"
                    android:layout_marginBottom="@dimen/margin_16"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
